--- a/styles/style.css
+++ b/styles/style.css
@@ -81,11 +81,13 @@ main {
 
     font-weight: 600;
     padding-left: 20px;
+    
 
 }
 
 .influencer-img {
     background: url("/images/Circle\ design.svg");
+ background-repeat: no-repeat;
 
 
 }
@@ -109,6 +111,16 @@ main {
     margin-left: 20px;
 }
 
+
+/* 2nd part */
+.logo{
+    display: flex;
+    margin-top: 120px;
+   
+}
+.logo-content img {
+    padding: 30px;
+}
 
 
 
@@ -143,8 +155,20 @@ main {
 
             padding: 0;
             font-size: 2rem;
-           margin: 0 auto;
+           /* margin: 0 auto; */
+           padding-left: 80px;
            }
+
+                   .influencer .section-paragraph {
+
+                    padding-left: 80px;
+                   
+                   }
+                   .btn-primary{
+                    margin-left: 80px;
+                   }
+
+                                  
 
    
 
